--- a/pom.xml
+++ b/pom.xml
@@ -302,8 +302,9 @@
                         <configuration>
                             <reportPlugins>
                                 <plugin>
+									<groupId>org.apache.maven.plugins</groupId>
                                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                                    <version>2.7</version>
+                                    <version>3.0</version>
                                 </plugin>
                                 <plugin>
                                     <groupId>org.jacoco</groupId>
